F** Update CSS to avoid stretching boxes with characters in them

--- a/index.css
+++ b/index.css
@@ -13,6 +13,7 @@ td {
   border: 1px solid currentColor;
   width: var(--cell-size);
   height: var(--cell-size);
+  font-size: calc(var(--cell-size) - 3px);
   margin: 0;
   padding: 0;
 }
